// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Container Basic 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 1280px;
  padding-left: 16px;
  padding-right: 16px;
  width: 100%;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  height: 250px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    />
  </div>,
]
`;

exports[`Storyshots Components/Container With App Layout 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #F3F4FC;
  border: 1px solid rgba(0,0,0,0.12);
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid rgba(0,0,0,0.12);
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 64px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-left: auto;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 1280px;
  padding-left: 16px;
  padding-right: 16px;
  width: 100%;
  padding-top: 24px;
  padding-bottom: 24px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c17 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c17::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c7 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c7::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c3 {
  font-family: "Inter",sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.75rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.4204545454545454rem);
  -ms-transform: translateY(0.4204545454545454rem);
  transform: translateY(0.4204545454545454rem);
  text-align: initial;
}

.c3::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.9409090909090908rem;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c12 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c19 *,
.c19 *::before,
.c19 *::after {
  box-sizing: border-box;
}

.c19:first-child {
  padding-top: 32px;
}

.c19:last-child {
  padding-bottom: 32px;
}

.c19:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c15:only-child {
  padding-bottom: 32px;
}

.c16 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #38A169;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c8:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8:visited,
.c8:active {
  color: #38A169;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  width: 16px;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2 c3"
      >
        <span
          className="c4"
        >
          ACME
        </span>
      </h1>
      <nav
        className="c5"
      >
        <div
          className="c6"
          role="list"
        >
          <p
            className="c2 c7"
            role="listitem"
          >
            <span
              className="c4"
            >
              <a
                className="c8"
                href="/home"
                onBlur={[Function]}
                onFocus={[Function]}
                rel={null}
              >
                Home
              </a>
            </span>
          </p>
          <div
            className="c9"
          />
          <p
            className="c2 c7"
            role="listitem"
          >
            <span
              className="c4"
            >
              <a
                className="c8"
                href="/products"
                onBlur={[Function]}
                onFocus={[Function]}
                rel={null}
              >
                Products
              </a>
            </span>
          </p>
          <div
            className="c9"
          />
          <p
            className="c2 c7"
            role="listitem"
          >
            <span
              className="c4"
            >
              <a
                className="c8"
                href="/account"
                onBlur={[Function]}
                onFocus={[Function]}
                rel={null}
              >
                Account
              </a>
            </span>
          </p>
        </div>
      </nav>
    </div>
    <main
      className="c10"
    >
      <div
        className="c11 c12"
      >
        <div
          className="c13"
        />
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
            >
              <h2
                className="c2 c17"
              >
                <span
                  className="c18"
                >
                  About ACME
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c19"
          >
            Here is some text about ACME corp
          </div>
        </div>
      </div>
    </main>
  </div>,
]
`;

exports[`Storyshots Components/Container With No Gutters 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  height: 250px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: 1280px;
  padding-left: 0px;
  padding-right: 0px;
  width: 100%;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    />
  </div>,
]
`;

exports[`Storyshots Components/Container With No Max Width 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  height: 250px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
  max-width: none;
  padding-left: 16px;
  padding-right: 16px;
  width: 100%;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    />
  </div>,
]
`;
